[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Falling Platform/falling_platform.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Falling Platform/castle_env.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.9853, 7.01469 )

[sub_resource type="Animation" id=2]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ NodePath(".."), NodePath("..") ]
}

[node name="falling_platform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.00226, 1.66855 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, 0.166849 )
scale = Vector2( 1.45803, 1.49481 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 2 )
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
